--- a/CSS/style.css
+++ b/CSS/style.css
@@ -96,7 +96,8 @@ header {
     color: white;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
-    display: flex;
+    display: block;
+    height: 45px;
 }
 
 .button:hover {
@@ -552,6 +553,7 @@ span::first-letter {
     font-size: 14px;
     cursor: pointer;
     width: 45%;
+    height: 45px;
     text-align: center;
     transition: all 0.3s ease-in-out;
 }
