--- a/CSS/style.css
+++ b/CSS/style.css
@@ -459,6 +459,7 @@ legend::before {
     box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
     transform: translateX(-600px);
     opacity: 0;
+    overflow: hidden;
 }
 
 .plats label {
