--- a/Sass/layouts/_header.scss
+++ b/Sass/layouts/_header.scss
@@ -13,6 +13,13 @@ header {
 		left: 1em;
 	}
 }
+
+.full {
+    font-family: 'Shrikhand', sans-serif;
+    font-size: 30px;
+    font-weight: lighter;
+}
+
 .menu-restaurants-header {
 	display: flex;
 	justify-content: space-around;
