--- a/Sass/layouts/_menu_body.scss
+++ b/Sass/layouts/_menu_body.scss
@@ -25,4 +25,15 @@
 	.main-container-menu {
 		max-width: unset;
 	}
+
+	.body-menu-restaurants {
+		margin-left: auto;
+		margin-right: auto;
+		width: 70%;
+	
+	}
+	
+	.le-menu {
+		width: 70%;
+	}
 }
