--- a/Sass/base/_normalize.scss
+++ b/Sass/base/_normalize.scss
@@ -12,3 +12,12 @@ a {
 body {
     margin: 0px;
 }
+
+@media only screen and (min-width: 775px) {
+
+    body {
+        display: flex;
+        justify-content: stretch;
+    }
+
+}
