--- a/Sass/components/_button.scss
+++ b/Sass/components/_button.scss
@@ -1,5 +1,10 @@
 $color_1: white;
 
+.commande {
+    display: flex; 
+    justify-content: center;
+}
+
 .button {
 	background-image: linear-gradient(to bottom, #FF79DA, #9356DC);
 	box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
